liv chatstats feb

--- a/stats/index.html
+++ b/stats/index.html
@@ -12,68 +12,94 @@
 <script type="text/javascript" src="main.js"></script>
 <body>
 	<div id="navbar-placeholder"></div>
-	<h1>December 2023</h1>
-    <img src="../assets/December23.png" alt="Chart Unavailable"/>
+	<h1>February 2024</h1>
+	<h2><a href="archive/jan24.html">January's Stats are also avaliable HERE</a></h2>
+<img src="../assets/feb24.png" alt="Chart Unavailable"/>
 <h2>Detailed chat stats</h2>
-    <h5>Stats this month include 14 hour end of year stream</h5>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-  		<li>minoarno: 1180 messages</li>
-		<li>OfficiallySp: 1048 messages</li>
-		<li>Phantomspower: 780 messages</li>
-		<li>ItsChrisyBaby: 741 messages</li>
-		<li><mark>ObliviosaOfficial</mark>: 401 messages</li>
-		<li>LowlifePrincessx: 357 messages</li>
-		<li>MrXadion: 343 messages</li>
-		<li>emilauss: 329 messages</li>
-		<li>Streamlabs: 272 messages</li>
-		<li>TheOneAndOnlyDo_: 266 messages</li>
-		<li>Knight1y: 237 messages</li>
-		<li>Nightbot: 156 messages</li>
-		<li>LowlifePrincex: 140 messages</li>
-		<li>KingCobraDK: 139 messages</li>
-		<li><em>AKIBA212</em> and MoonlitAly: 138 messages each</li>
-		<li>Blurrp, <strong>RD07x__</strong> and <strong>Tjorbjorn</strong>: 136 messages each</li>
-		<li><em>AngleGabriel__: 131 messages</em></li>
-		<li>AttemptHouse: 119 messages</li>
-		<li>girldon: 117 messages</li>
-		<li>extremedolphins and BigBangRay: 115 messages each</li>
-		<li>mikeyuchiha: 104 messages</li>
-		<li>Janooobi: 102 messages</li>
-		<li>Thicc_Loaf: 100 messages</li>
-		<li>firesaffron: 98 messages</li>
-		<li>WizeBot: 94 messages</li>
-		<li>oemsked: 86 messages</li>
-		<li>BeholdBrooke: 82 messages</li>
-		<li>Matt_Eversman: 80 messages</li>
-		<li><em>OSFrog: 72 messages</em></li>
-		<li>sergmist97: 71 messages</li>
-		<li>BigDog_Q: 69 messages</li>
-		<li>ra_von: 64 messages</li>
-		<li>PlayWithViewersBot: 63 messages</li>
-		<li>MeshThaa: 62 messages</li>
-		<li>FeiTFR: 60 messages</li>
-		<li>chiefbeef1234: 51 messages</li>
-		<li>ayvottv and CezarNorge: 50 messages each</li>
-		<li>MagnoliaBobatry and StreamElements: 49 messages</li>
-		<li>Xylais: 48 messages</li>
-		<li>ph00kster: 47 messages</li>
-		<li>toxic_fusions1: 46 messages</li>
-		<li>alericocoooo: 42 messages</li>
-		<li>JoshuaMbh: 41 messages</li>
-		<li>YellowFlashA9: 38 messages</li>
-		<li>PrizeGottiGaming and deadkid54: 37 messages each</li>
-		<li>ATEL0PHOBlA and MaicoMolo: 35 messages each</li>
-		<li>NakeyKing: 34 messages</li>
-		<li>xxpoohdaddyxx: 31 messages</li>
-		<li>Blackl0ud and OKAYBLAST: 30 messages each</li>
-		<li>Rhyer25: 28 messages</li>
+<li>Phantomspower: 1013 messages</li>
+<li>Streamlabs: 699 messages</li>
+<li>minoarno: 570 messages</li>
+<li>Buildingbob345: 505 messages</li>
+<li>AKIBA212: 472 messages</li>
+<li>OfficiallySp: 470 messages</li>
+<li>ItsChrisyBaby: 425 messages</li>
+<li>Knight1y: 321 messages</li>
+<li>AngleGabriel__: 302 messages</li>
+<li>ChiSkillz: 266 messages</li>
+<li>CezarNorge: 254 messages</li>
+<li>RD07x__: 178 messages</li>
+<li>extremedolphins: 177 messages</li>
+<li>OSFrog: 174 messages</li>
+<li>TheOneAndOnlyDo_ and Matt_Eversman: 173 messages each</li>
+<li>ObliviosaOfficial: 163 messages</li>
+<li>FaTtYShOw: 160 messages</li>
+<li>MrXadion: 139 messages</li>
+<li>toxic_fusions1: 133 messages</li>
+<li>Nightbot: 131 messages</li>
+<li>starstruck: 126 messages</li>
+<li>SirJester2: 121 messages</li>
+<li>emilauss: 120 messages</li>
+<li>Janooobi: 117 messages</li>
+<li>sammziee: 109 messages</li>
+<li>NakeyKingKlaus and ysavibe: 94 messages each</li>
+<li>LowlifePrincessx: 89 messages</li>
+<li>Thicc_Loaf and PrizeGottiGaming: 81 messages each</li>
+<li>VelvetGeisha: 78 messages</li>
+<li>OKAYBLAST: 76 messages</li>
+<li>PlayWithViewersBot: 75 messages</li>
+<li>unseenmadnez: 74 messages</li>
+<li>BigDog_Q: 70 messages</li>
+<li>BigBangRay and Magiic_Carpet: 69 messages each</li>
+<li>firesaffron: 64 messages</li>
+<li>robbiehammo99: 61 messages</li>
+<li>oemsked and FeiTFR: 59 messages each</li>
+<li>KingCobraDK: 52 messages</li>
+<li>StreamElements: 48 messages</li>
+<li>JustSknow: 47 messages</li>
+<li>YellowFlashA9: 46 messages</li>
+<li>thetanpineapple: 45 messages</li>
+<li>Rhyer25: 44 messages</li>
+<li>chiefbeef1234: 42 messages</li>
+<li>MisterYashi, DrDerpalot and sergmist97: 41 messages each</li>
+<li>slawtergg: 36 messages</li>
+<li>PandiPeruvi, edu2002pa and JoshuaMbh: 35 messages each</li>
+<li>andinis: 33 messages</li>
+<li>apexblimund and Omarpapajo: 31 messages each</li>
+<li>Djbeight: 29 messages</li>
+<li>SCT_samurai: 28 messages</li>
+<li>MaicoMolo: 26 messages</li>
+<li>BeholdBrooke, MeshThaa and ayvottv: 25 messages each</li>
+<li>Blackl0ud, Dordin and mettee_: 24 messages each</li>
+<li>monitor4821: 23 messages</li>
+<li>xxpoohdaddyxx: 22 messages</li>
+<li>bigpapimonsterdragon: 21 messages</li>
+<li>ShhSierra: 20 messages</li>
+<li>jordanslither: 19 messages</li>
+<li>riseshin3: 18 messages</li>
+<li>BigTiddyGoff_, Flash_INK, zoro19856442 and LowlifePrincex: 17 messages each</li>
+<li>alericocoooo, Genghiss and EnigmaXVI: 16 messages each</li>
+<li>TheRealMrHaXx, Xylais and cgabrielthefirst: 15 messages each</li>
+<li>sentimentaltrooper, Seycross, aclcgrimreever, LionelNessie_ and metajezza: 14 messages each</li>
+<li>trixie9th and Yorubiya: 13 messages each</li>
+<li>MoonlitAly, NoVaCk_3893, sunflowersabyss, TheJukus, Plamenov, midlane_enthusiast and ograven1: 12 messages each</li>
+<li>borednbothered, maginkaa, demacia14, IcyUK, partydogftw and trixiethealien: 11 messages each</li>
+<li>STARJEFFREY64, Bianclana, Tjorbjorn and DJFrankieB: 10 messages each</li>
+<li>alecspursa, CosmicTurtle2788 and scarlettnguyen: 9 messages each</li>
+<li>kp923589, firefistgrogu, BigOleRock, kozyoffline, HAZE21FY, dropkickedJake, lingleebao and mikeyuchiha: 8 messages each</li>
+<li>xKanbar, Habutoo, crovvttv, natsusamo, rxempire and Raidek: 7 messages each</li>
+<li>Teentitans333, murderbirdexpress, solkian, BombasticSly, jmjanu, ChefCurryGames, AttemptHouse, SonglistBot, girldon and JoesLWorld: 6 messages each</li>
+<li>coupleofstickers, destroyerjaan, costi555 and Katana1988: 5 messages each</li>
+<li>KI113RWOLF117, theclawsaremine, ItsCynda, justloliehh, TheSweetSniper, Mosrix, dali_khe, Blurrp, saiefe, mrs_cattipiller, deadkid54 and yangsunny: 4 messages each</li>
+<li>shushan_tank, ChonkyChocobo, harishm06, Irratix, darkkyber1, YaDudeBryan, junkmemes, burtly, WD40PyRO, MagnoliaBobatry, imperialninja, kount_kai, ShauncastGaming, transloucent_, WacKGLooNy, withinaccent and AnAnonymousGifter: 3 messages each</li>
+<li>itsbriannalawnya, ToxicSecretS, ArcusFata, HappyAxedents, ATEL0PHOBlA, xxblueshellxx, Neidorii, TheUncommonLoon, mosesconspiracy, cezk0s, ZsoltiiB, Gorran_, AYoACrow, Bluejay_Trax, god_sword_dung, JDGhosted and golam159: 2 messages each</li>
+<li>foREVerA7X87, fallendriver, BigTexYeeYeeHenry, FrankDenif, fbdbjrhrhbtjjdjjj, Heat_XD, RisingSalt, thatguyyung, designerskyline_, MommaMouseChaos, TheCozmicOne, yetti_sn, Hristo4Life, Ronsou, xx_geralt_xx, RPFletch, gitmolol, oreo_1129, Swim__Shady_, jassmintt, Wander_VT, unluckyskeleton, cloudmind_helpingway, SleepySeal_, canadian_tom123, friendlypersonnotbooter3, PatchedProphet, yoriekasan, basicryanx, mikey98123, alexander_69169, phoso_fish, Soleater_, makaveli1022, 繁星若塵, TheRealVilain, ojkers3, WhyHer, Moshinery, WordOfJesus, imadiaperedpanda, nutartine, 4nthemz, Sjdjhdwker, nabadazz, Denjiiio, Lavs_Died, gerwini, nestor_lol7, savaarus, ramyv9, denkata18, CruceA, SoundAlerts and Memlil0: 1 messages each</li>
 </ol>
-		<h4>10886 Total messages Logged from 241 Chat Participants over 8 Streams</h4>
+		<h4>10568 Total messages Logged from 240 Chat Participants over 9 Streams</h4>
     <footer>
-        <p>Go watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or even <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
-        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2023)</p>
+        <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
+        <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2024)</p>
     </footer>
 </body>
-
 </html>
