--- a/scale.html
+++ b/scale.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script
+    type="module"
+    src="https://cdn.jsdelivr.net/npm/@bufferhead/nightowl@0.0.14/dist/nightowl.js"
+></script>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {box-sizing: border-box;}
