--- a/stats/navbar.html
+++ b/stats/navbar.html
@@ -31,6 +31,8 @@
                     <a href="/stats/archive/oct23.html">October 2023</a>
 					<a href="/stats/archive/nov23.html">November 2023</a>
 					<a href="/stats/archive/dec23.html">December 2023</a>
+					<a href="/stats/archive/jan24.html">January 2024</a>
+					<a href="/stats/archive/feb24.html">February 2024</a>
                 </div>
             </div>
             <div class="dropdown">
