liv did a last minute stream

--- a/stats/index.html
+++ b/stats/index.html
@@ -18,85 +18,89 @@
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-<li>Phantomspower: 1013 messages</li>
-<li>Streamlabs: 699 messages</li>
+<li>Phantomspower: 1104 messages</li>
+<li>Streamlabs: 772 messages</li>
 <li>minoarno: 570 messages</li>
-<li>Buildingbob345: 505 messages</li>
-<li>AKIBA212: 472 messages</li>
+<li>AKIBA212: 560 messages</li>
+<li>Buildingbob345: 506 messages</li>
 <li>OfficiallySp: 470 messages</li>
-<li>ItsChrisyBaby: 425 messages</li>
-<li>Knight1y: 321 messages</li>
-<li>AngleGabriel__: 302 messages</li>
-<li>ChiSkillz: 266 messages</li>
-<li>CezarNorge: 254 messages</li>
+<li>ItsChrisyBaby: 442 messages</li>
+<li>Knight1y: 353 messages</li>
+<li>AngleGabriel__: 326 messages</li>
+<li>ChiSkillz: 270 messages</li>
+<li>CezarNorge: 260 messages</li>
+<li>Matt_Eversman: 240 messages</li>
+<li>OSFrog: 199 messages</li>
+<li>TheOneAndOnlyDo_ and FaTtYShOw: 185 messages each</li>
 <li>RD07x__: 178 messages</li>
 <li>extremedolphins: 177 messages</li>
-<li>OSFrog: 174 messages</li>
-<li>TheOneAndOnlyDo_ and Matt_Eversman: 173 messages each</li>
-<li>ObliviosaOfficial: 163 messages</li>
-<li>FaTtYShOw: 160 messages</li>
-<li>MrXadion: 139 messages</li>
-<li>toxic_fusions1: 133 messages</li>
-<li>Nightbot: 131 messages</li>
+<li>ObliviosaOfficial: 173 messages</li>
+<li>SirJester2: 153 messages</li>
+<li>PrizeGottiGaming: 141 messages</li>
+<li>MrXadion and Nightbot: 139 messages each</li>
+<li>toxic_fusions1: 134 messages</li>
+<li>emilauss: 129 messages</li>
 <li>starstruck: 126 messages</li>
-<li>SirJester2: 121 messages</li>
-<li>emilauss: 120 messages</li>
-<li>Janooobi: 117 messages</li>
-<li>sammziee: 109 messages</li>
-<li>NakeyKingKlaus and ysavibe: 94 messages each</li>
-<li>LowlifePrincessx: 89 messages</li>
-<li>Thicc_Loaf and PrizeGottiGaming: 81 messages each</li>
+<li>Janooobi: 120 messages</li>
+<li>LowlifePrincessx: 114 messages</li>
+<li>sammziee: 108 messages</li>
+<li>NakeyKingKlaus: 94 messages</li>
+<li>ysavibe: 93 messages</li>
+<li>Thicc_Loaf: 81 messages</li>
 <li>VelvetGeisha: 78 messages</li>
-<li>OKAYBLAST: 76 messages</li>
+<li>BigBangRay and OKAYBLAST: 76 messages each</li>
 <li>PlayWithViewersBot: 75 messages</li>
 <li>unseenmadnez: 74 messages</li>
 <li>BigDog_Q: 70 messages</li>
-<li>BigBangRay and Magiic_Carpet: 69 messages each</li>
-<li>firesaffron: 64 messages</li>
+<li>Magiic_Carpet: 69 messages</li>
+<li>Dordin: 65 messages</li>
+<li>KingCobraDK and firesaffron: 64 messages each</li>
 <li>robbiehammo99: 61 messages</li>
-<li>oemsked and FeiTFR: 59 messages each</li>
-<li>KingCobraDK: 52 messages</li>
-<li>StreamElements: 48 messages</li>
-<li>JustSknow: 47 messages</li>
-<li>YellowFlashA9: 46 messages</li>
-<li>thetanpineapple: 45 messages</li>
+<li>oemsked: 60 messages</li>
+<li>FeiTFR: 59 messages</li>
+<li>JustSknow and StreamElements: 52 messages each</li>
+<li>YellowFlashA9 and thetanpineapple: 48 messages each</li>
+<li>Defeatss: 45 messages</li>
 <li>Rhyer25: 44 messages</li>
-<li>chiefbeef1234: 42 messages</li>
-<li>MisterYashi, DrDerpalot and sergmist97: 41 messages each</li>
+<li>chiefbeef1234: 43 messages</li>
+<li>DrDerpalot, MisterYashi and sergmist97: 41 messages each</li>
+<li>ayvottv: 39 messages</li>
 <li>slawtergg: 36 messages</li>
-<li>PandiPeruvi, edu2002pa and JoshuaMbh: 35 messages each</li>
+<li>PandiPeruvi, JoshuaMbh and edu2002pa: 35 messages each</li>
+<li>Omarpapajo: 34 messages</li>
 <li>andinis: 33 messages</li>
-<li>apexblimund and Omarpapajo: 31 messages each</li>
+<li>apexblimund: 31 messages</li>
+<li>MoonlitAly: 30 messages</li>
 <li>Djbeight: 29 messages</li>
 <li>SCT_samurai: 28 messages</li>
 <li>MaicoMolo: 26 messages</li>
-<li>BeholdBrooke, MeshThaa and ayvottv: 25 messages each</li>
-<li>Blackl0ud, Dordin and mettee_: 24 messages each</li>
-<li>monitor4821: 23 messages</li>
+<li>MeshThaa, BeholdBrooke and trixie9th: 25 messages each</li>
+<li>mettee_, fairypuella and Blackl0ud: 24 messages each</li>
+<li>Seycross and monitor4821: 23 messages each</li>
 <li>xxpoohdaddyxx: 22 messages</li>
 <li>bigpapimonsterdragon: 21 messages</li>
 <li>ShhSierra: 20 messages</li>
-<li>jordanslither: 19 messages</li>
+<li>WilliamPoggers and jordanslither: 19 messages each</li>
 <li>riseshin3: 18 messages</li>
-<li>BigTiddyGoff_, Flash_INK, zoro19856442 and LowlifePrincex: 17 messages each</li>
-<li>alericocoooo, Genghiss and EnigmaXVI: 16 messages each</li>
-<li>TheRealMrHaXx, Xylais and cgabrielthefirst: 15 messages each</li>
-<li>sentimentaltrooper, Seycross, aclcgrimreever, LionelNessie_ and metajezza: 14 messages each</li>
-<li>trixie9th and Yorubiya: 13 messages each</li>
-<li>MoonlitAly, NoVaCk_3893, sunflowersabyss, TheJukus, Plamenov, midlane_enthusiast and ograven1: 12 messages each</li>
-<li>borednbothered, maginkaa, demacia14, IcyUK, partydogftw and trixiethealien: 11 messages each</li>
-<li>STARJEFFREY64, Bianclana, Tjorbjorn and DJFrankieB: 10 messages each</li>
-<li>alecspursa, CosmicTurtle2788 and scarlettnguyen: 9 messages each</li>
-<li>kp923589, firefistgrogu, BigOleRock, kozyoffline, HAZE21FY, dropkickedJake, lingleebao and mikeyuchiha: 8 messages each</li>
-<li>xKanbar, Habutoo, crovvttv, natsusamo, rxempire and Raidek: 7 messages each</li>
-<li>Teentitans333, murderbirdexpress, solkian, BombasticSly, jmjanu, ChefCurryGames, AttemptHouse, SonglistBot, girldon and JoesLWorld: 6 messages each</li>
-<li>coupleofstickers, destroyerjaan, costi555 and Katana1988: 5 messages each</li>
-<li>KI113RWOLF117, theclawsaremine, ItsCynda, justloliehh, TheSweetSniper, Mosrix, dali_khe, Blurrp, saiefe, mrs_cattipiller, deadkid54 and yangsunny: 4 messages each</li>
-<li>shushan_tank, ChonkyChocobo, harishm06, Irratix, darkkyber1, YaDudeBryan, junkmemes, burtly, WD40PyRO, MagnoliaBobatry, imperialninja, kount_kai, ShauncastGaming, transloucent_, WacKGLooNy, withinaccent and AnAnonymousGifter: 3 messages each</li>
-<li>itsbriannalawnya, ToxicSecretS, ArcusFata, HappyAxedents, ATEL0PHOBlA, xxblueshellxx, Neidorii, TheUncommonLoon, mosesconspiracy, cezk0s, ZsoltiiB, Gorran_, AYoACrow, Bluejay_Trax, god_sword_dung, JDGhosted and golam159: 2 messages each</li>
-<li>foREVerA7X87, fallendriver, BigTexYeeYeeHenry, FrankDenif, fbdbjrhrhbtjjdjjj, Heat_XD, RisingSalt, thatguyyung, designerskyline_, MommaMouseChaos, TheCozmicOne, yetti_sn, Hristo4Life, Ronsou, xx_geralt_xx, RPFletch, gitmolol, oreo_1129, Swim__Shady_, jassmintt, Wander_VT, unluckyskeleton, cloudmind_helpingway, SleepySeal_, canadian_tom123, friendlypersonnotbooter3, PatchedProphet, yoriekasan, basicryanx, mikey98123, alexander_69169, phoso_fish, Soleater_, makaveli1022, 繁星若塵, TheRealVilain, ojkers3, WhyHer, Moshinery, WordOfJesus, imadiaperedpanda, nutartine, 4nthemz, Sjdjhdwker, nabadazz, Denjiiio, Lavs_Died, gerwini, nestor_lol7, savaarus, ramyv9, denkata18, CruceA, SoundAlerts and Memlil0: 1 messages each</li>
+<li>zoro19856442, Flash_INK, BigTiddyGoff_ and LowlifePrincex: 17 messages each</li>
+<li>Genghiss, EnigmaXVI and alericocoooo: 16 messages each</li>
+<li>cgabrielthefirst, aclcgrimreever, TheRealMrHaXx, Xylais and borednbothered: 15 messages each</li>
+<li>sentimentaltrooper, metajezza and LionelNessie_: 14 messages each</li>
+<li>Yorubiya and Plamenov: 13 messages each</li>
+<li>sunflowersabyss, TheJukus, NoVaCk_3893, ograven1 and midlane_enthusiast: 12 messages each</li>
+<li>partydogftw, IcyUK, DJFrankieB, trixiethealien, demacia14 and maginkaa: 11 messages each</li>
+<li>firefistgrogu, STARJEFFREY64, Bianclana and Tjorbjorn: 10 messages each</li>
+<li>alecspursa, CosmicTurtle2788, scarlettnguyen and justice2k1_: 9 messages each</li>
+<li>mikeyuchiha, kp923589, Habutoo, HAZE21FY, BigOleRock, kozyoffline, lingleebao and dropkickedJake: 8 messages each</li>
+<li>crovvttv, Raidek, god_sword_dung, shout_max, xKanbar, rxempire and natsusamo: 7 messages each</li>
+<li>ChefCurryGames, murderbirdexpress, girldon, SonglistBot, AttemptHouse, JoesLWorld, solkian, Teentitans333, BombasticSly, icecoldk94 and jmjanu: 6 messages each</li>
+<li>costi555, imperialninja, deadkid54, destroyerjaan, Katana1988 and coupleofstickers: 5 messages each</li>
+<li>dali_khe, Mosrix, justloliehh, yangsunny, TheSweetSniper, KI113RWOLF117, ItsCynda, saiefe, theclawsaremine, mrs_cattipiller and Blurrp: 4 messages each</li>
+<li>junkmemes, darkkyber1, Irratix, ChonkyChocobo, burtly, kount_kai, shushan_tank, Mana248, harishm06, YaDudeBryan, withinaccent, S4mantaSuaAnta, WD40PyRO, ShauncastGaming, AnAnonymousGifter, transloucent_, MagnoliaBobatry and WacKGLooNy: 3 messages each</li>
+<li>danieljonker911, xxblueshellxx, itsbriannalawnya, golam159, ArcusFata, ATEL0PHOBlA, AYoACrow, JDGhosted, TheUncommonLoon, mosesconspiracy, cezk0s, ZsoltiiB, ToxicSecretS, Gorran_, Neidorii, HappyAxedents, amazing_fansss_, Bluejay_Trax and VoyagerDecoded: 2 messages each</li>
+<li>PatchedProphet, xx_geralt_xx, friendlypersonnotbooter3, 繁星若塵, nabadazz, Heat_XD, RisingSalt, thatguyyung, designerskyline_, MommaMouseChaos, FrankDenif, yetti_sn, ramyv9, yoriekasan, Memlil0, Ronsou, WhyHer, gitmolol, fbdbjrhrhbtjjdjjj, 4nthemz, jassmintt, Wander_VT, unluckyskeleton, cloudmind_helpingway, SleepySeal_, imadiaperedpanda, denkata18, Hristo4Life, phoso_fish, nestor_lol7, mama_mobi, foREVerA7X87, CruceA, fallendriver, alexander_69169, BigTexYeeYeeHenry, Swim__Shady_, makaveli1022, Sjdjhdwker, RPFletch, TheRealVilain, ojkers3, WordOfJesus, Moshinery, TheCozmicOne, mikey98123, oreo_1129, SoundAlerts, canadian_tom123, Denjiiio, Lavs_Died, gerwini, savaarus, Soleater_, basicryanx, nutartine and Purrls: 1 messages each</li>
 </ol>
-		<h4>10568 Total messages Logged from 240 Chat Participants over 9 Streams</h4>
+		<h4>11453 Total messages Logged from 253 Chat Participants over 10 Streams</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2024)</p>
