liv did a stream yesterday what a biatch

--- a/stats/index.html
+++ b/stats/index.html
@@ -18,89 +18,90 @@
 <h2>Detailed chat stats</h2>
     <p>Channel VIP's are marked as <strong>bold</strong>. Mods are <em>italicised</em></p>
 <ol>
-<li>Phantomspower: 1104 messages</li>
-<li>Streamlabs: 772 messages</li>
+<li>Phantomspower: 1123 messages</li>
+<li>Streamlabs: 816 messages</li>
+<li>AKIBA212: 671 messages</li>
+<li>OfficiallySp: 597 messages</li>
 <li>minoarno: 570 messages</li>
-<li>AKIBA212: 560 messages</li>
-<li>Buildingbob345: 506 messages</li>
-<li>OfficiallySp: 470 messages</li>
-<li>ItsChrisyBaby: 442 messages</li>
-<li>Knight1y: 353 messages</li>
+<li>Buildingbob345: 513 messages</li>
+<li>ItsChrisyBaby: 461 messages</li>
+<li>Knight1y: 372 messages</li>
 <li>AngleGabriel__: 326 messages</li>
+<li>Matt_Eversman: 305 messages</li>
 <li>ChiSkillz: 270 messages</li>
-<li>CezarNorge: 260 messages</li>
-<li>Matt_Eversman: 240 messages</li>
-<li>OSFrog: 199 messages</li>
-<li>TheOneAndOnlyDo_ and FaTtYShOw: 185 messages each</li>
-<li>RD07x__: 178 messages</li>
+<li>CezarNorge: 261 messages</li>
+<li>ObliviosaOfficial: 238 messages</li>
+<li>FaTtYShOw: 225 messages</li>
+<li>OSFrog: 205 messages</li>
+<li>TheOneAndOnlyDo_: 204 messages</li>
+<li>RD07x__: 182 messages</li>
 <li>extremedolphins: 177 messages</li>
-<li>ObliviosaOfficial: 173 messages</li>
-<li>SirJester2: 153 messages</li>
-<li>PrizeGottiGaming: 141 messages</li>
-<li>MrXadion and Nightbot: 139 messages each</li>
+<li>SirJester2: 156 messages</li>
+<li>Nightbot: 149 messages</li>
+<li>PrizeGottiGaming: 143 messages</li>
+<li>MrXadion: 139 messages</li>
+<li>emilauss: 137 messages</li>
 <li>toxic_fusions1: 134 messages</li>
-<li>emilauss: 129 messages</li>
 <li>starstruck: 126 messages</li>
-<li>Janooobi: 120 messages</li>
+<li>KingCobraDK and sammziee: 121 messages each</li>
+<li>FeiTFR and Janooobi: 120 messages each</li>
 <li>LowlifePrincessx: 114 messages</li>
-<li>sammziee: 108 messages</li>
+<li>OKAYBLAST: 113 messages</li>
+<li>firesaffron: 98 messages</li>
 <li>NakeyKingKlaus: 94 messages</li>
 <li>ysavibe: 93 messages</li>
 <li>Thicc_Loaf: 81 messages</li>
 <li>VelvetGeisha: 78 messages</li>
-<li>BigBangRay and OKAYBLAST: 76 messages each</li>
+<li>BigBangRay: 76 messages</li>
 <li>PlayWithViewersBot: 75 messages</li>
-<li>unseenmadnez: 74 messages</li>
+<li>unseenmadnez and Dordin: 74 messages each</li>
 <li>BigDog_Q: 70 messages</li>
 <li>Magiic_Carpet: 69 messages</li>
-<li>Dordin: 65 messages</li>
-<li>KingCobraDK and firesaffron: 64 messages each</li>
 <li>robbiehammo99: 61 messages</li>
-<li>oemsked: 60 messages</li>
-<li>FeiTFR: 59 messages</li>
-<li>JustSknow and StreamElements: 52 messages each</li>
-<li>YellowFlashA9 and thetanpineapple: 48 messages each</li>
+<li>oemsked and JustSknow: 60 messages each</li>
+<li>StreamElements and thetanpineapple: 57 messages each</li>
+<li>ayvottv: 50 messages</li>
+<li>YellowFlashA9: 49 messages</li>
 <li>Defeatss: 45 messages</li>
-<li>Rhyer25: 44 messages</li>
-<li>chiefbeef1234: 43 messages</li>
-<li>DrDerpalot, MisterYashi and sergmist97: 41 messages each</li>
-<li>ayvottv: 39 messages</li>
+<li>sentimentaltrooper, Rhyer25 and chiefbeef1234: 44 messages each</li>
+<li>sergmist97, DrDerpalot and MisterYashi: 41 messages each</li>
 <li>slawtergg: 36 messages</li>
-<li>PandiPeruvi, JoshuaMbh and edu2002pa: 35 messages each</li>
+<li>PandiPeruvi, edu2002pa and JoshuaMbh: 35 messages each</li>
 <li>Omarpapajo: 34 messages</li>
 <li>andinis: 33 messages</li>
 <li>apexblimund: 31 messages</li>
-<li>MoonlitAly: 30 messages</li>
+<li>MoonlitAly and JDGhosted: 30 messages each</li>
 <li>Djbeight: 29 messages</li>
 <li>SCT_samurai: 28 messages</li>
+<li>Merz_IP: 27 messages</li>
 <li>MaicoMolo: 26 messages</li>
-<li>MeshThaa, BeholdBrooke and trixie9th: 25 messages each</li>
-<li>mettee_, fairypuella and Blackl0ud: 24 messages each</li>
-<li>Seycross and monitor4821: 23 messages each</li>
+<li>BeholdBrooke, MeshThaa, Seycross and trixie9th: 25 messages each</li>
+<li>mettee_, Blackl0ud and fairypuella: 24 messages each</li>
+<li>monitor4821 and borednbothered: 23 messages each</li>
 <li>xxpoohdaddyxx: 22 messages</li>
-<li>bigpapimonsterdragon: 21 messages</li>
+<li>alericocoooo and bigpapimonsterdragon: 21 messages each</li>
 <li>ShhSierra: 20 messages</li>
-<li>WilliamPoggers and jordanslither: 19 messages each</li>
+<li>aclcgrimreever, WilliamPoggers and jordanslither: 19 messages each</li>
 <li>riseshin3: 18 messages</li>
-<li>zoro19856442, Flash_INK, BigTiddyGoff_ and LowlifePrincex: 17 messages each</li>
-<li>Genghiss, EnigmaXVI and alericocoooo: 16 messages each</li>
-<li>cgabrielthefirst, aclcgrimreever, TheRealMrHaXx, Xylais and borednbothered: 15 messages each</li>
-<li>sentimentaltrooper, metajezza and LionelNessie_: 14 messages each</li>
-<li>Yorubiya and Plamenov: 13 messages each</li>
-<li>sunflowersabyss, TheJukus, NoVaCk_3893, ograven1 and midlane_enthusiast: 12 messages each</li>
-<li>partydogftw, IcyUK, DJFrankieB, trixiethealien, demacia14 and maginkaa: 11 messages each</li>
-<li>firefistgrogu, STARJEFFREY64, Bianclana and Tjorbjorn: 10 messages each</li>
-<li>alecspursa, CosmicTurtle2788, scarlettnguyen and justice2k1_: 9 messages each</li>
-<li>mikeyuchiha, kp923589, Habutoo, HAZE21FY, BigOleRock, kozyoffline, lingleebao and dropkickedJake: 8 messages each</li>
-<li>crovvttv, Raidek, god_sword_dung, shout_max, xKanbar, rxempire and natsusamo: 7 messages each</li>
-<li>ChefCurryGames, murderbirdexpress, girldon, SonglistBot, AttemptHouse, JoesLWorld, solkian, Teentitans333, BombasticSly, icecoldk94 and jmjanu: 6 messages each</li>
-<li>costi555, imperialninja, deadkid54, destroyerjaan, Katana1988 and coupleofstickers: 5 messages each</li>
-<li>dali_khe, Mosrix, justloliehh, yangsunny, TheSweetSniper, KI113RWOLF117, ItsCynda, saiefe, theclawsaremine, mrs_cattipiller and Blurrp: 4 messages each</li>
-<li>junkmemes, darkkyber1, Irratix, ChonkyChocobo, burtly, kount_kai, shushan_tank, Mana248, harishm06, YaDudeBryan, withinaccent, S4mantaSuaAnta, WD40PyRO, ShauncastGaming, AnAnonymousGifter, transloucent_, MagnoliaBobatry and WacKGLooNy: 3 messages each</li>
-<li>danieljonker911, xxblueshellxx, itsbriannalawnya, golam159, ArcusFata, ATEL0PHOBlA, AYoACrow, JDGhosted, TheUncommonLoon, mosesconspiracy, cezk0s, ZsoltiiB, ToxicSecretS, Gorran_, Neidorii, HappyAxedents, amazing_fansss_, Bluejay_Trax and VoyagerDecoded: 2 messages each</li>
-<li>PatchedProphet, xx_geralt_xx, friendlypersonnotbooter3, 繁星若塵, nabadazz, Heat_XD, RisingSalt, thatguyyung, designerskyline_, MommaMouseChaos, FrankDenif, yetti_sn, ramyv9, yoriekasan, Memlil0, Ronsou, WhyHer, gitmolol, fbdbjrhrhbtjjdjjj, 4nthemz, jassmintt, Wander_VT, unluckyskeleton, cloudmind_helpingway, SleepySeal_, imadiaperedpanda, denkata18, Hristo4Life, phoso_fish, nestor_lol7, mama_mobi, foREVerA7X87, CruceA, fallendriver, alexander_69169, BigTexYeeYeeHenry, Swim__Shady_, makaveli1022, Sjdjhdwker, RPFletch, TheRealVilain, ojkers3, WordOfJesus, Moshinery, TheCozmicOne, mikey98123, oreo_1129, SoundAlerts, canadian_tom123, Denjiiio, Lavs_Died, gerwini, savaarus, Soleater_, basicryanx, nutartine and Purrls: 1 messages each</li>
+<li>LowlifePrincex, BigTiddyGoff_, Flash_INK and zoro19856442: 17 messages each</li>
+<li>Genghiss, Xylais and EnigmaXVI: 16 messages each</li>
+<li>TheRealMrHaXx, natsusamo and cgabrielthefirst: 15 messages each</li>
+<li>metajezza and LionelNessie_: 14 messages each</li>
+<li>Yorubiya, Plamenov and ChefCurryGames: 13 messages each</li>
+<li>ograven1, midlane_enthusiast, NoVaCk_3893, sunflowersabyss and TheJukus: 12 messages each</li>
+<li>DJFrankieB, IcyUK, partydogftw, maginkaa, trixiethealien and demacia14: 11 messages each</li>
+<li>firefistgrogu, Bianclana, Tjorbjorn and STARJEFFREY64: 10 messages each</li>
+<li>alecspursa, justice2k1_, Phytos11, scarlettnguyen and CosmicTurtle2788: 9 messages each</li>
+<li>Denjiiio, dropkickedJake, kp923589, Habutoo, lingleebao, mikeyuchiha, BigOleRock, HAZE21FY and kozyoffline: 8 messages each</li>
+<li>rxempire, xKanbar, god_sword_dung, Raidek, crovvttv and shout_max: 7 messages each</li>
+<li>BombasticSly, Dread42, Teentitans333, jmjanu, icecoldk94, solkian, SonglistBot, JoesLWorld, AttemptHouse, girldon and murderbirdexpress: 6 messages each</li>
+<li>imperialninja, costi555, destroyerjaan, coupleofstickers, Katana1988, deadkid54 and transloucent_: 5 messages each</li>
+<li>thvjjh2110, TheSweetSniper, Blurrp, theclawsaremine, dali_khe, justloliehh, yangsunny, Mosrix, mrs_cattipiller, KI113RWOLF117, ItsCynda and saiefe: 4 messages each</li>
+<li>XervierYo, shushan_tank, harishm06, S4mantaSuaAnta, YaDudeBryan, Mana248, ChonkyChocobo, burtly, WD40PyRO, kount_kai, Irratix, MagnoliaBobatry, withinaccent, ShauncastGaming, junkmemes, darkkyber1, AnAnonymousGifter and WacKGLooNy: 3 messages each</li>
+<li>danieljonker911, ZsoltiiB, ToxicSecretS, Neidorii, itsbriannalawnya, TheUncommonLoon, Gorran_, ArcusFata, HappyAxedents, ATEL0PHOBlA, mosesconspiracy, xxblueshellxx, cezk0s, Memlil0, golam159, empi6996, amazing_fansss_, VoyagerDecoded, Bluejay_Trax and AYoACrow: 2 messages each</li>
+<li>Ronsou, cloudmind_helpingway, Heat_XD, RisingSalt, savaarus, PatchedProphet, SleepySeal_, thatguyyung, unluckyskeleton, designerskyline_, Wander_VT, MommaMouseChaos, gerwini, yetti_sn, jassmintt, yoriekasan, Hristo4Life, gitmolol, fbdbjrhrhbtjjdjjj, Lavs_Died, mikey98123, WordOfJesus, Soleater_, basicryanx, phoso_fish, nutartine, 繁星若塵, WhyHer, imadiaperedpanda, denkata18, xx_geralt_xx, TheCozmicOne, ramyv9, RPFletch, Swim__Shady_, FrankDenif, nestor_lol7, CruceA, fallendriver, Sjdjhdwker, Moshinery, ojkers3, TheRealVilain, makaveli1022, alexander_69169, foREVerA7X87, mama_mobi, BigTexYeeYeeHenry, Purrls, SoundAlerts, 4nthemz, nabadazz, canadian_tom123, oreo_1129 and friendlypersonnotbooter3: 1 messages each</li>
 </ol>
-		<h4>11453 Total messages Logged from 253 Chat Participants over 10 Streams</h4>
+		<h4>12422 Total messages Logged from 259 Chat Participants over 11 Streams</h4>
     <footer>
         <p>Watch <a href="https://www.twitch.tv/obliviosaofficial">Obliviosa on Twitch</a> or <a href="https://www.instagram.com/obliviosaofficial/">follow her on Instagram</a>.</p>
         <p>Statpage made with ❤️ by OfficiallySp (Shane Pepperell ©️ 2024)</p>
