fixed twitch embed

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         width: 1280,
         height: 720,
         channel: "obliviosaofficial",
-        // Only needed if this page is going to be embedded on other websites
-        parent: ["https://obliviosa.net/"]
+		allowfullscreen: true,
+		autoplay: true,
       });
     </script>
 <p><a href="stats/index.html">looking for chatstats? find them here</a></p>
