--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 		a {
 			font-size: 28px;
 		}
+	    	h4 {
+			font-size: 10px;
+		}
         .yes {
             color: green;
         }
@@ -55,6 +58,7 @@
       });
     </script>
 <p><a href="stats/index.html">looking for chatstats? find them here</a></p>
+<h4>liv is a nerd</h4>
 <script>
     // Define Liv's schedule
     // Format: [day of the week, start hour (24h format), start minute, live link]
