fix mini emotes

--- a/stats/emote.html
+++ b/stats/emote.html
@@ -141,29 +141,27 @@
             <!-- List of other emotes -->
             <div class="emote-list">
                 <h3>All Emotes</h3>
-                <ul>
-					<li><img src="/assets/livmotes/oblivi118Heart.png" alt="Emote">Heart: 177</li>
-					<li><img src="/assets/livmotes/oblivi118Sip.gif" alt="Emote"> Sip: 164</li>
-					<li><img src="/assets/livmotes/oblivi118Cookie.gif" alt="Emote">Cookie: 131</li>
-					<li><img src="/assets/livmotes/oblivi118Blush.png" alt="Emote">Blush: 126</li>
-					<li><img src="/assets/livmotes/oblivi118Lighter.png" alt="Emote">Lighter: 114</li>
-					<li><img src="/assets/livmotes/oblivi118Cozy.png" alt="Emote">Cozy: 68</li>
-					<li><img src="/assets/livmotes/oblivi118Lurking.gif" alt="Emote">Lurking: 61</li>
-					<li><img src="/assets/livmotes/oblivi118Sing.png" alt="Emote">Sing: 29</li>
-					<li><img src="/assets/livmotes/oblivi118WINK.png" alt="Emote">WINK: 28</li>
-					<li><img src="/assets/livmotes/oblivi118Gun.png" alt="Emote">Gun: 24</li>
-					<li><img src="/assets/livmotes/oblivi118Giggle.gif" alt="Emote">Giggle: 22</li>
-					<li><img src="/assets/livmotes/oblivi118Evil.png" alt="Emote">Evil: 22</li>
-					<li><img src="/assets/livmotes/oblivi118Pat.png" alt="Emote">Pat: 15</li>
-					<li><img src="/assets/livmotes/oblivi118What.png" alt="Emote">What: 12</li>
-					<li><img src="/assets/livmotes/oblivi118Lol.png" alt="Emote">Lol: 11</li>
-					<li><img src="/assets/livmotes/oblivi118Hands.png" alt="Emote">Hands: 9</li>
-					<li><img src="/assets/livmotes/oblivi118Hehe.png" alt="Emote">Hehe: 5</li>
-					<li><img src="/assets/livmotes/oblivi118Huh.png" alt="Emote">Huh: 1</li>
-					<li><img src="/assets/livmotes/oblivi118Zzz.png" alt="Emote">Zzz: 1</li>
-					<li><img src="/assets/livmotes/oblivi118Tea.png" alt="Emote">Tea: 1</li>
+<img src="/assets/livmotes/oblivi118Heart.png" alt="Emote">Heart: 177
+<img src="/assets/livmotes/oblivi118Sip.gif" alt="Emote"> Sip: 164
+<img src="/assets/livmotes/oblivi118Cookie.gif" alt="Emote">Cookie: 131
+<img src="/assets/livmotes/oblivi118Blush.png" alt="Emote">Blush: 126
+<img src="/assets/livmotes/oblivi118Lighter.png" alt="Emote">Lighter: 114
+<img src="/assets/livmotes/oblivi118Cozy.png" alt="Emote">Cozy: 68
+<img src="/assets/livmotes/oblivi118Lurking.gif" alt="Emote">Lurking: 61
+<img src="/assets/livmotes/oblivi118Sing.png" alt="Emote">Sing: 29
+<img src="/assets/livmotes/oblivi118WINK.png" alt="Emote">WINK: 28
+<img src="/assets/livmotes/oblivi118Gun.png" alt="Emote">Gun: 24
+<img src="/assets/livmotes/oblivi118Giggle.gif" alt="Emote">Giggle: 22
+<img src="/assets/livmotes/oblivi118Evil.png" alt="Emote">Evil: 22
+<img src="/assets/livmotes/oblivi118Pat.png" alt="Emote">Pat: 15
+<img src="/assets/livmotes/oblivi118What.png" alt="Emote">What: 12
+<img src="/assets/livmotes/oblivi118Lol.png" alt="Emote">Lol: 11
+<img src="/assets/livmotes/oblivi118Hands.png" alt="Emote">Hands: 9
+<img src="/assets/livmotes/oblivi118Hehe.png" alt="Emote">Hehe: 5
+<img src="/assets/livmotes/oblivi118Huh.png" alt="Emote">Huh: 1
+<img src="/assets/livmotes/oblivi118Zzz.png" alt="Emote">Zzz: 1
+<img src="/assets/livmotes/oblivi118Tea.png" alt="Emote">Tea: 1
                     <!-- More emotes here -->
-                </ul>
             </div>
         </div>
 	</div>
